--- a/Styles/Post_page.css
+++ b/Styles/Post_page.css
@@ -1,12 +1,3 @@
-/*Font Families*/
-/*font-family: 'Audiowide', cursive;*/
-/*font-family: 'Playball', cursive;*/
-/*font-family: 'Dancing Script', cursive;*/
-/*font-family: 'Black Ops One', cursive;*/
-
-
-/*Animations*/
-
 ::-webkit-scrollbar {
     width: 0;
     background: transparent;
@@ -21,10 +12,6 @@ html, body {
     width: 100%;
     height: 100%;
     overflow:hidden;
-}
-a {
-    color:white;
-    font-style: normal;
 }
 .Main {
     text-align:center;
@@ -85,6 +72,7 @@ a {
     font-size: 16px;
     color: #8f928e;
     font-family: Arial, Helvetica, sans-serif;
+    margin-left: 18px;
 }
 .TextContainer{
     margin-top: 10px;
@@ -122,88 +110,4 @@ a {
     min-height: 470px;
     overflow-y: scroll;
     overflow:no-display;
-}
-.Suggestions{
-    height:100%;
-}
-.Header{
-    text-align: center;
-    align-items: center;
-    vertical-align: middle;
-    height: 7%;
-}
-.PopularPosts{
-    margin-top:5%;
-    font-size:22px;
-    font-weight: bold;
-    font-family: 'Dancing Script', cursive;
-    color:black;
-}
-.SuggestedPosts{
-    margin-top:4%;
-    height:55%;
-    max-height:320px;
-}
-.SuggestedPost{
-    box-shadow: 0px 0px 5px 0px;
-    margin-top: 10px;
-    width: 86%;
-    height: 42%;
-    background-color: #d9d2d5;
-    display: inline-block;
-}
-.ImageContainer{
-    float: left;
-    width:30%;
-    height:90%;
-    margin-top:5%;
-}
-.PostImage{
-    width: 80%;
-    max-width: 80%;
-}
-.Content{
-    text-align: left;
-    float: left;
-    width:70%;
-    height:90%;
-    margin-top:5%;
-}
-.ContentText{
-    margin-top:10px;
-}
-.RecentPosts{
-    margin-top: 9%;
-    height:100%;
-    max-height:320px;
-}
-.RecentPost{
-    box-shadow: 0px 0px 5px 0px;
-    margin-top: 10px;
-    width: 86%;
-    height: 31%;
-    background-color: #d9d2d5;
-    display: inline-block;
-}
-.blogger-search .input-group-addon{
-    background: white !important;
-}
-.blogger-search .form-control{
-    border-right:0;
-    box-shadow:0 0 0;
-    border-color:#ccc;
-}
-.blogger-search button{
-    border:0;
-    background:transparent;
-}
-.PopularPostsContainer{
-    width:100%;
-    height:405px;
-    background-color: whitesmoke;
-}
-.RecentPostContainer{
-    width:100%;
-    height:405px;
-    background-color: whitesmoke;
 }
