--- a/Styles/User_page.css
+++ b/Styles/User_page.css
@@ -5,7 +5,6 @@
 ::-webkit-scrollbar-thumb {
     background: transparent;
 }
-
 html, body {
     margin: 0;
     padding: 0;
@@ -13,21 +12,17 @@ html, body {
     height: 100%;
     overflow:hidden;
 }
-a {
-    color:white;
-    font-style: normal;
-}
-.Main {
-    text-align:center;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    background: url(../Images/Login_Page/background-image-2.jpeg) no-repeat center bottom;
-    background-size: cover;
-}
 .DivMainRight{
     height:100%;
     background-color: #E0E7ED;
+}
+.Main {
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: url(../../Images/Profile_Page/pexels-photo.jpg) no-repeat center bottom;
+    background-size: cover;
 }
 .Navbar{
     width:100%;
@@ -39,7 +34,7 @@ a {
     align-items: center;
 }
 .NavbarLogo{
-    width:86px;
+    width:5%;
     height:100%;
     float: left;
 }
@@ -50,19 +45,13 @@ a {
     font-family: 'Black Ops One', cursive;
 
 }
-.User{
-    background-color: whitesmoke;
-    border: none;
-    text-align: left;
-    width: 100%;
-}
 .SearchContainer{
     width: 83%;
     float:right;
     margin-right:15px;
 }
 .blogger-search .input-group-addon{
-    background: white !important;
+    background: white;
 }
 .blogger-search .form-control{
     border-right:0;
@@ -145,32 +134,31 @@ a {
     letter-spacing: 1px;
     margin-left: 12px;
     margin-top: 4px;
-    cursor:pointer;
-}
-.YourPosts{
-    width: 70%;
-    position: absolute;
-    margin-top: 24px;
-    min-height: 470px;
-    height: 100%;
-    overflow-y: scroll;
-    overflow:no-display;
 }
 .Post {
-    width: 132%;
+    width: 98%;
     margin: 2% 12.5% 2% 1%;
-    height: 230px;
+    min-height: 150px;
     background-color: whitesmoke;
     overflow: hidden;
     box-shadow: 5px 5px 13px 0px;
 }
-.UploadedPhoto {
-    width: 99%;
-    margin-bottom: 8px;
-    margin-top: 8px;
+.PostHeader{
+    margin-left:10px;
+    height: 62px;
+    width: 100%;
+    border-bottom: solid 2px #80008c;
+}
+.PostProfileName {
+    margin: 10px 0 0 0;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight:bold;
+    color: #8f928e;
+    float: left;
 }
 .PostMainImage{
-    width: 15%;
+    width: 34%;
     float: left;
     margin: 10px;
 }
@@ -186,17 +174,6 @@ a {
     width: 63%;
     float: right;
 }
-.PersonalInfo {
-    top: 175px;
-    position: absolute;
-    background-color: white;
-    opacity: 0.8;
-    width: 19%;
-    left: 2.5%;
-    min-height: 450px;
-    text-align: left;
-    padding-left: 2%;
-}
 .PostContent{
     height:247px;
 }
@@ -207,6 +184,14 @@ a {
     text-align: left;
     color: #4b4e4a;
 }
+.Posts{
+    height:100%;
+    position: absolute;
+    margin-top:5px;
+    min-height: 470px;
+    overflow-y: scroll;
+    overflow:no-display;
+}
 .ReadMore{
-    float: left;
+    float:left;
 }
